service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 8888
  type: LoadBalancer
